--- a/src/pages/notes/2021/9702_-_Physics/Paper_4_-_A_Level_Structured_Questions/Communication.mdx
+++ b/src/pages/notes/2021/9702_-_Physics/Paper_4_-_A_Level_Structured_Questions/Communication.mdx
@@ -5,7 +5,6 @@ import Li from 'components/Li';
 import Subheading from 'components/Subheading';
 import TeX from 'components/TeX';
 import Ul from 'components/Ul';
-import { Legend, Line, LineChart } from 'recharts';
 
 # Most modern communication techniques use waves
 
@@ -24,7 +23,7 @@ In amplitude modulation the frequency of the modulated wave is constant, and the
 
 Carrier Wave
 
-<LineChart width={350} height={100} data={[
+<LineChart dataKey="Carrier wave" data={[
     { 'Carrier wave': 0 },
     { 'Carrier wave': 1 },
     { 'Carrier wave': -1 },
@@ -41,9 +40,7 @@ Carrier Wave
     { 'Carrier wave': 1 },
     { 'Carrier wave': -1 },
     { 'Carrier wave': 0 },
-]}>
-    <Line type="monotone" dataKey="Carrier wave" stroke="#ff0066" strokeWidth={3} dot={null} />
-</LineChart>
+]}/>
 
 <Typography>
     + Signal wave
@@ -63,38 +60,30 @@ Carrier Wave
     { 'Signal wave': null },
     { 'Signal wave': null },
     { 'Signal wave': -1 },
-]}>
-    <Line connectNulls type="monotone" dataKey="Signal wave" isAnimationActive={false} strokeWidth={3} stroke="#d0b9e9" dot={null} />
-</LineChart>
-
+]}/>
 <Typography>
     = Amplitude modulated wave
 </Typography>
 
 <LineChart width={350} height={200} data={[
-    { 'Amplitude modulated wave': 0, 'Signal wave': 0, 'Inverted signal wave': 0 },
-    { 'Amplitude modulated wave': 0.25, 'Signal wave': null, 'Inverted signal wave': null },
-    { 'Amplitude modulated wave': -0.5, 'Signal wave': null, 'Inverted signal wave': null },
-    { 'Amplitude modulated wave': 0.75, 'Signal wave': null, 'Inverted signal wave': null },
-    { 'Amplitude modulated wave': -1, 'Signal wave': 1, 'Inverted signal wave': -1 },
-    { 'Amplitude modulated wave': 0.75, 'Signal wave': null, 'Inverted signal wave': null },
-    { 'Amplitude modulated wave': -0.5, 'Signal wave': null, 'Inverted signal wave': null },
-    { 'Amplitude modulated wave': 0.25, 'Signal wave': null, 'Inverted signal wave': null },
-    { 'Amplitude modulated wave': 0, 'Signal wave': 0, 'Inverted signal wave': 0 },
-    { 'Amplitude modulated wave': -0.25, 'Signal wave': null, 'Inverted signal wave': null },
-    { 'Amplitude modulated wave': 0.5, 'Signal wave': null, 'Inverted signal wave': null },
-    { 'Amplitude modulated wave': -0.75, 'Signal wave': null, 'Inverted signal wave': null },
-    { 'Amplitude modulated wave': 1, 'Signal wave': 1, 'Inverted signal wave': -1 },
-    { 'Amplitude modulated wave': -0.75, 'Signal wave': null, 'Inverted signal wave': null },
-    { 'Amplitude modulated wave': 0.5, 'Signal wave': null, 'Inverted signal wave': null },
-    { 'Amplitude modulated wave': -0.25, 'Signal wave': null, 'Inverted signal wave': null },
-    { 'Amplitude modulated wave': 0, 'Signal wave': 0, 'Inverted signal wave': 0 },
-]}>
-    <Legend />
-    <Line type="monotone" dataKey="Amplitude modulated wave" isAnimationActive={false} stroke="#ff0066" strokeWidth={3} dot={null} />
-    <Line connectNulls type="monotone" dataKey="Signal wave" isAnimationActive={false} stroke="#d0b9e9" strokeWidth={3} strokeDasharray="2 20" dot={null} />
-    <Line connectNulls type="monotone" dataKey="Inverted signal wave" isAnimationActive={false} stroke="#d0b9e9" strokeWidth={3} strokeDasharray="2 20" dot={null} />
-</LineChart>
+    {'Signal wave': 0, 'Amplitude modulated wave': 0,  'Inverted signal wave': 0 },
+    { 'Signal wave': null,'Amplitude modulated wave': 0.25, 'Inverted signal wave': null },
+    { 'Signal wave': null,'Amplitude modulated wave': -0.5, 'Inverted signal wave': null },
+    { 'Signal wave': null,'Amplitude modulated wave': 0.75, 'Inverted signal wave': null },
+    { 'Signal wave': 1, 'Amplitude modulated wave': -1, 'Inverted signal wave': -1 },
+    { 'Signal wave': null,'Amplitude modulated wave': 0.75, 'Inverted signal wave': null },
+    { 'Signal wave': null,'Amplitude modulated wave': -0.5, 'Inverted signal wave': null },
+    { 'Signal wave': null,'Amplitude modulated wave': 0.25, 'Inverted signal wave': null },
+    { 'Signal wave': 0,'Amplitude modulated wave': 0,  'Inverted signal wave': 0 },
+    { 'Signal wave': null,'Amplitude modulated wave': -0.25, 'Inverted signal wave': null },
+    { 'Signal wave': null,'Amplitude modulated wave': 0.5, 'Inverted signal wave': null },
+    { 'Signal wave': null, 'Amplitude modulated wave': -0.75, 'Inverted signal wave': null },
+    { 'Signal wave': 1, 'Amplitude modulated wave': 1, 'Inverted signal wave': -1 },
+    { 'Signal wave': null, 'Amplitude modulated wave': -0.75, 'Inverted signal wave': null },
+    { 'Signal wave': null, 'Amplitude modulated wave': 0.5, 'Inverted signal wave': null },
+    { 'Signal wave': null, 'Amplitude modulated wave': -0.25, 'Inverted signal wave': null },
+    { 'Signal wave': 0,'Amplitude modulated wave': 0,  'Inverted signal wave': 0 },
+]}/>
 
 <Subheading showJump>
     Frequency Modulation
@@ -109,7 +98,7 @@ Carrier Wave
     Carrier Wave
 </Typography>
 
-<LineChart width={350} height={100} data={[
+<LineChart data={[
     { 'Carrier wave': 0 },
     { 'Carrier wave': 1 },
     { 'Carrier wave': -1 },
@@ -132,9 +121,7 @@ Carrier Wave
     { 'Carrier wave': 1 },
     { 'Carrier wave': -1 },
     { 'Carrier wave': 0 },
-]}>
-    <Line type="monotone" dataKey="Carrier wave" isAnimationActive={false} stroke="#ff0066" strokeWidth={3} dot={null} />
-</LineChart>
+]}/>
 
 <Typography>
     + Signal wave
@@ -154,9 +141,7 @@ Carrier Wave
     { 'Signal wave': null },
     { 'Signal wave': null },
     { 'Signal wave': -1 },
-]}>
-    <Line connectNulls type="monotone" dataKey="Signal wave" isAnimationActive={false} strokeWidth={3} stroke="#d0b9e9" dot={null} />
-</LineChart>
+]}/>
 
 
 <Typography>
@@ -190,10 +175,7 @@ Carrier Wave
     { 'Frequency modulated wave': null },
     { 'Frequency modulated wave': -1 },
     { 'Frequency modulated wave': 0 },
-]}>
-    <Legend />
-    <Line connectNulls type="monotone" dataKey="Frequency modulated wave" stroke="#ff0066" isAnimationActive={false} strokeWidth={3} dot={null} />
-</LineChart>
+]}/>
 
 <Subheading showJump>
     Sidebands and bandwidth
@@ -304,9 +286,7 @@ Carrier Wave
     { 'Signal wave': 0 }, { 'Signal wave': 1 },
     { 'Signal wave': 0 }, { 'Signal wave': 1 },
     { 'Signal wave': 0 }, { 'Signal wave': 0 },
-]}>
-    <Line connectNulls type="step" dataKey="Signal wave" isAnimationActive={false} strokeWidth={3} stroke="#d0b9e9" dot={null} />
-</LineChart>
+]}/>
 
 
 <Typography>
