--- a/src/pages/notes/2021/9702_-_Physics/Paper_4_-_A_Level_Structured_Questions/Test_MDX.mdx
+++ b/src/pages/notes/2021/9702_-_Physics/Paper_4_-_A_Level_Structured_Questions/Test_MDX.mdx
@@ -1,4 +1,28 @@
-import { Line, LineChart } from 'recharts';
+# JOYOJOYJYOJYOO???!?!?!
+
+test
+
+<LineChart dataKey="Signal wave" data={[
+    { 'Signal wave': -1 },
+    { 'Signal wave': null },
+    { 'Signal wave': null },
+    { 'Signal wave': 1 },
+    { 'Signal wave': null },
+    { 'Signal wave': null },
+    { 'Signal wave': -1 },
+    { 'Signal wave': null },
+    { 'Signal wave': null },
+    { 'Signal wave': 1 },
+    { 'Signal wave': null },
+    { 'Signal wave': null },
+    { 'Signal wave': -1 },
+]}/>
+
+excigma is very pissed off
+
+<div style={{ padding: '20px', backgroundColor: 'tomato' }}>
+  <h3>This is JSX</h3>
+</div>
 
 <LineChart width={350} height={100} data={[
     { 'Signal wave': -1 },
@@ -15,5 +39,7 @@ import { Line, LineChart } from 'recharts';
     { 'Signal wave': null },
     { 'Signal wave': -1 },
 ]}>
-    <Line connectNulls type="monotone" dataKey="Signal wave" isAnimationActive={false} strokeWidth={3} stroke="#d0b9e9" dot={null}></Line>
+<Line connectNulls type="monotone" dataKey="Signal wave" isAnimationActive={false} strokeWidth={3} stroke="#d0b9e9" dot={null}/>
 </LineChart>
+
+## test
