fix: mdx is pain ugh

--- a/src/pages/notes/2021/9702_-_Physics/Paper_4_-_A_Level_Structured_Questions/Communication.mdx
+++ b/src/pages/notes/2021/9702_-_Physics/Paper_4_-_A_Level_Structured_Questions/Communication.mdx
@@ -5,6 +5,7 @@ import Li from 'components/Li';
 import Subheading from 'components/Subheading';
 import TeX from 'components/TeX';
 import Ul from 'components/Ul';
+import {MDXProvider} from '@next/mdx'
 
 # Most modern communication techniques use waves
 
