new: try getting rid of table to cut bundle size :/

--- a/src/pages/notes/2021/9702_-_Physics/Paper_4_-_A_Level_Structured_Questions/Gravitational_and_Electric_Fields.mdx
+++ b/src/pages/notes/2021/9702_-_Physics/Paper_4_-_A_Level_Structured_Questions/Gravitational_and_Electric_Fields.mdx
@@ -54,3 +54,24 @@ $$
 \phi = \frac{-GM}{r}
 $$
 
+## Escape velocity
+
+The velocity at which an object on the surface of a body/mass must be propelled to in order not to return to that body under their mutual gravitation attraction
+
+i.e energy required to get $r = \infty$m from earth
+
+$$
+\Delta{E_p} (gain) = E_p (\infty) - E_p (surface)
+$$
+
+$$
+= 0 - \frac{-GMm}{r_e}
+$$
+
+$$
+\frac{-GM\cancel{m}}{r_e} = \frac{1}{2} \cancel{m} v^2
+$$
+
+$$
+\sqrt{\frac{2GM}{r_e}} = v_{escape}
+$$
