--- a/src/pages/notes/2021/9708_-_Economics/Macroeconomy/Inflation.mdx
+++ b/src/pages/notes/2021/9708_-_Economics/Macroeconomy/Inflation.mdx
@@ -6,3 +6,12 @@ This is the sustained or persistent decrease in the general price level over tim
 
 ## Hyperflation
 Inflation above 25%
+
+## Causes of Inflation
+- Demand-pull
+- - Demand has gone up significantly
+- Cost push
+- - Prices go up due to less demand
+- Quantity theory of money
+- - $MV = PT$
+- - Money supply x Income velocity = Price level x Real GDP
