--- a/src/pages/notes/2021/9708_-_Economics/Macroeconomy/Inflation.mdx
+++ b/src/pages/notes/2021/9708_-_Economics/Macroeconomy/Inflation.mdx
@@ -15,3 +15,13 @@ Inflation above 25%
 - Quantity theory of money
 - - $MV = PT$
 - - Money supply x Income velocity = Price level x Real GDP
+
+## Monetarist
+Inflation is always is a monetary phenomemnon
+This theory is based on the qualitytheory of money QTM.
+
+$$
+M * V = P * T
+$$
+Money supply * income velocity = Price level * Real GDP
+V and T has overline (add later)
