--- a/src/pages/notes/2021/9708_-_Economics/Macroeconomy/Inflation.mdx
+++ b/src/pages/notes/2021/9708_-_Economics/Macroeconomy/Inflation.mdx
@@ -25,3 +25,9 @@ M * V = P * T
 $$
 Money supply * income velocity = Price level * Real GDP
 V and T has overline (add later)
+
+## Why is inflation bad?
+1. Lowers the purchasing power of consumers
+2. Inflation increases the nominal rate of interest
+3. Loss in international competitiveness 
+4. Debtors gain and creditors lowers
