update: fix grammar

--- a/src/pages/notes/2021/9702_-_Physics/Paper_4_-_A_Level_Structured_Questions/Communication.mdx
+++ b/src/pages/notes/2021/9702_-_Physics/Paper_4_-_A_Level_Structured_Questions/Communication.mdx
@@ -13,9 +13,9 @@ import Ul from 'components/Ul';
 - A.M: Amplitude  modulation
 - F.M: Frequency  modulation
 
-Both types of modulation uses a "Carrier Wave"
+Both types of modulation use a "Carrier Wave"
 
-Carrier wave is a high frequency Electromagnetic wave modulated in either frequency or amplitude to transfer a signal
+A Carrier wave is a high-frequency Electromagnetic wave modulated in either frequency or amplitude to transfer a signal
 
 ## Amplitude Modulation
 
@@ -251,7 +251,7 @@ Carrier Wave
 </TableContainer>
 
 <Information title="Definition">
-    Noise is random unwanted signal that interferes with and distorts a transmitted signal
+    Noise is a random unwanted signal that interferes with and distorts a transmitted signal
 </Information>
 
 <Information title="Definition">
@@ -263,11 +263,11 @@ Carrier Wave
 </Subheading>
 
 <Typography>
-    Signal has same variation as the data and is continuously variable. When an analog signal is transmitted over a long distance it will be attenuated and pickup background noise.
+    Signal has the same variation as the data and is continuously variable. When an analog signal is transmitted over a long distance it will be attenuated and pick up the background noise.
 </Typography>
 
 <Typography>
-    For the signal to continue to travel, it must be periodically amplified by a repeater, however this also amplifies any distortion/noise, negatively affecting the signal
+    For the signal to continue to travel, it must be periodically amplified by a repeater, however, this also amplifies any distortion/noise, negatively affecting the signal
 </Typography>
 
 <Subheading showJump>
@@ -300,7 +300,7 @@ Carrier Wave
 
 <Ul>
     <Li>
-        Signal can be regenerated and noise eliminated
+        The signal can be regenerated and noise eliminated
     </Li>
     <Li>
         Extra data can be added to check for errors
@@ -309,7 +309,7 @@ Carrier Wave
         Multiplexing: Digital from a large number of different sources can share the same path
     </Li>
     <Li>
-        Digital circuit are more reliable/cheaper to produce
+        Digital circuits are more reliable/cheaper to produce
     </Li>
     <Li>
         Data can be encrypted for security
@@ -364,15 +364,15 @@ Carrier Wave
 
 <Typography>
     In digital transmission, the analog signal (e.g voice) is converted to digital using an ADC (Analog to digital converter).
-    When received, the signal can be regenerated into it's analog form using an DAC (Digital to analog converter)
+    When received, the signal can be regenerated into its analog form using a DAC (Digital to analog converter)
 </Typography>
 
 <Information title="Definition">
-    Sampling - Take analogue signal and "sample" it's voltage at regular intervals called "sampling rate"
+    Sampling - Take analog signal and "sample" its voltage at regular intervals called "sampling rate"
 </Information>
 
 <Typography>
-    e.g. if sampling rate is 10 Hz, then 10 samples per second are taken and interval between samples is 0.1s
+    e.g. if the sampling rate is 10 Hz, then 10 samples per second are taken and the interval between samples is 0.1s
 </Typography>
 
 <Typography>
@@ -384,7 +384,7 @@ Carrier Wave
 </Typography>
 
 <Typography>
-    These sample (instantaneous voltages) are converted into a binary number representing their value. How accurate this depends on depends on the number of bits.
+    These samples (instantaneous voltages) are converted into a binary number representing their value. How accurate this depends on the number of bits.
 </Typography>
 
 <Information severity="error" title="ADCs can ONLY 'round' down">
@@ -397,7 +397,7 @@ Carrier Wave
 </Typography>
 
 <Typography>
-    When received, a serial to parallel converter can be used to convert the signal back to it's original form.
+    When received, a serial to parallel converter can be used to convert the signal back to its original form.
 </Typography>
 
 <Subheading showJump>
@@ -409,7 +409,7 @@ Carrier Wave
 </Typography>
 
 <Typography>
-    Increase number of bits per sample to allow for a more precise binary representation of the analog signal's initial voltage
+    Increase the number of bits per sample to allow for a more precise binary representation of the analog signal's initial voltage
 </Typography>
 
 <Subheading showJump>
@@ -434,7 +434,7 @@ Carrier Wave
 </Subheading>
 
 <Typography>
-    Gradual decrease in power of signal over distance
+    The gradual decrease in the power of signal over distance
 </Typography>
 
 <Typography>
@@ -462,7 +462,7 @@ $$
 </Typography>
 
 <Typography>
-    Repeaters repeating a digital signal are able to remove noise and amplify signal, improving SNR.
+    Repeaters repeating a digital signal can remove noise and amplify the signal, improving SNR.
 </Typography>
 
 <Subheading>
@@ -506,11 +506,11 @@ $$
 </Subheading>
 
 <Typography>
-    Carrier wave is transmitted from earth to the satellite, the signal is attenuated a lot and received. The signal is amplified and transmitted back to earth at a different carrier frequency, which will avoid "Swapping" of highly attenuated signal by the high power transmission.
+    Carrier wave is transmitted from earth to the satellite, the signal is attenuated a lot and received. The signal is amplified and transmitted back to earth at a different carrier frequency, which will avoid "Swapping" of the highly attenuated signal by the high power transmission.
 </Typography>
 
 <Typography>
-    The Electromagnetic frequency used is very high (10GHz-30GHz) to prevent ionosphere reflections and to have a large information carrying capacity.
+    The Electromagnetic frequency used is very high (10GHz-30GHz) to prevent ionosphere reflections and to have a large information-carrying capacity.
 </Typography>
 
 <TableContainer>
@@ -535,7 +535,7 @@ $$
     <TableCell>Higher altitude 36000km</TableCell>
 </TableRow>
 <TableRow>
-    <TableCell>Lower latency (as closer to Earth), however you will need to calculate or track it's position to communicate with it</TableCell>
+    <TableCell>Lower latency (as closer to Earth), however, you will need to calculate or track its position to communicate with it</TableCell>
     <TableCell>Higher latency (takes approximately 0.5s for 1 signal to travel to and back again)</TableCell>
 </TableRow>
 <TableRow>
