--- a/src/pages/notes/2021/9702_-_Physics/Paper_4_-_A_Level_Structured_Questions/Gravitational_Fields.mdx
+++ b/src/pages/notes/2021/9702_-_Physics/Paper_4_-_A_Level_Structured_Questions/Gravitational_Fields.mdx
@@ -7,7 +7,7 @@ import Ul from 'components/Ul';
 
 ## Newton's lawn of gravitation
 
-Force between two point masses is proportional to the product of their masses and inversely proportional to the square of their separation
+The force between two point masses is proportional to the product of their masses and inversely proportional to the square of their separation
 
 $$
 F_g = \frac{GMm}{r ^ 2}
