--- a/src/pages/notes/2021/9708_-_Economics/Macroeconomy/Fiscal_policy.mdx
+++ b/src/pages/notes/2021/9708_-_Economics/Macroeconomy/Fiscal_policy.mdx
@@ -3,7 +3,7 @@ import Subheading from 'components/Subheading';
 
 ## Fiscal policy
 
-This involves government expectation, raising taxation, revenue, and managing national debt for the purpose of improving economic performance
+This involves government expectation, raising taxation, revenue, and managing national debt to improve economic performance
 
 Fiscal policy is announced once a year in the "budget"
 
@@ -11,11 +11,11 @@ Budget deficit: this occurs when government expenditure is greater than governme
 
 Fiscal policy will cause the money invested to multiply. "One person's expenditure is another person's income"
 
-Multiplier is the change in reap GDP when there is a change in an injection
+The multiplier is the change in real GDP when there is a change in an injection
 
 ## Limitations of fiscal policy
 - Budget occurs yearly and it is difficult to change over time.
 - Low credit rating
 - Increased interest
 - Inflation
-- Size of multiplier (determined by savings, taxation and imports)
+- Size of multiplier (determined by savings, taxation, and imports) 
