--- a/src/pages/notes/2021/9708_-_Economics/Macroeconomy/Inflation.mdx
+++ b/src/pages/notes/2021/9708_-_Economics/Macroeconomy/Inflation.mdx
@@ -4,21 +4,21 @@ This is the sustained or persistent increase in the general price level over tim
 ## Deflation: 
 This is the sustained or persistent decrease in the general price level over time
 
-## Hyperflation
+## Hyperiflation
 Inflation above 25%
 
 ## Causes of Inflation
 - Demand-pull
 - - Demand has gone up significantly
-- Cost push
+- Cost-push
 - - Prices go up due to less demand
 - Quantity theory of money
 - - $MV = PT$
 - - Money supply x Income velocity = Price level x Real GDP
 
 ## Monetarist
-Inflation is always is a monetary phenomemnon
-This theory is based on the qualitytheory of money QTM.
+Inflation is always is a monetary phenomenon
+This theory is based on the quality theory of money (QTM).
 
 $$
 M * V = P * T
@@ -31,3 +31,14 @@ V and T has overline (add later)
 2. Inflation increases the nominal rate of interest
 3. Loss in international competitiveness 
 4. Debtors gain and creditors lowers
+
+
+Inflation is far worse for the economy if it is a shock and therefore unanticipated.
+If it is anticipated, then firms, workers, and the govt will adjust things accordingly
+
+Wage-price spiral: Once inflation occurs, it starts a process that is difficult to stop.
+- Nominal wages increase
+- Cost of production increases, leading to cost pull inflation
+- Price of final goods increases
+- Increase in cost of living
+- Trade Unions want a wage increase
