update: inflation notes

--- a/src/pages/notes/2021/9708_-_Economics/Macroeconomy/Inflation.mdx
+++ b/src/pages/notes/2021/9708_-_Economics/Macroeconomy/Inflation.mdx
@@ -42,3 +42,14 @@ Wage-price spiral: Once inflation occurs, it starts a process that is difficult 
 - Price of final goods increases
 - Increase in cost of living
 - Trade Unions want a wage increase
+
+1) Some inflation is better than Deflation
+- Deflation is associated with a recession and it is very difficult to use macroeconomal tools to correct.
+
+2) Inflation is more difficult to deal with if it is unstanble and prologed
+
+3_ Unanticipated inflation causes a shock to the economiy and is much more difficult to manage
+
+4) Inflation as compared to trading parnets is important as inflaction can affect international compoetititveness
+
+5) Managing inflationary expectations is very important in controlling inflation. NZ does this by havig an independant central bank and credible monetary policy.
