update: magnetic fields

--- a/src/pages/notes/2021/9702_-_Physics/Paper_4_-_A_Level_Structured_Questions/Magnetic_Fields.mdx
+++ b/src/pages/notes/2021/9702_-_Physics/Paper_4_-_A_Level_Structured_Questions/Magnetic_Fields.mdx
@@ -1,4 +1,7 @@
-## Magnetic fields in Magnetic
+## Magnetic fields in Magnets
 - Field travels from South to North 
 - Field travels South to North inside the magnetic
 - Direction of field lines at any given point is equal to the direction of Force on magnetic north pole at that point
+
+## Magnetics fields around a current carrying wire
+Any current-carrying conductor will induce a radial magnetic field around it the direction found by the right hand grip rule
