fix: typos and grammar

--- a/src/pages/notes/2021/9708_-_Economics/Macroeconomy/Inflation.mdx
+++ b/src/pages/notes/2021/9708_-_Economics/Macroeconomy/Inflation.mdx
@@ -4,7 +4,7 @@ This is the sustained or persistent increase in the general price level over tim
 ## Deflation: 
 This is the sustained or persistent decrease in the general price level over time
 
-## Hyperiflation
+## Hyperinflation
 Inflation above 25%
 
 ## Causes of Inflation
@@ -44,12 +44,12 @@ Wage-price spiral: Once inflation occurs, it starts a process that is difficult 
 - Trade Unions want a wage increase
 
 1) Some inflation is better than Deflation
-- Deflation is associated with a recession and it is very difficult to use macroeconomal tools to correct.
+- Deflation is associated with a recession and it is very difficult to use macroeconomic tools to correct it.
 
-2) Inflation is more difficult to deal with if it is unstanble and prologed
+2) Inflation is more difficult to deal with if it is unstable and prolonged
 
-3_ Unanticipated inflation causes a shock to the economiy and is much more difficult to manage
+3_ Unanticipated inflation causes a shock to the economy and is much more difficult to manage
 
-4) Inflation as compared to trading parnets is important as inflaction can affect international compoetititveness
+4) Inflation, as compared to trading partners, is important as inflation can affect international competitiveness
 
-5) Managing inflationary expectations is very important in controlling inflation. NZ does this by havig an independant central bank and credible monetary policy.
+5) Managing inflationary expectations is very important in controlling inflation. NZ does this by having an independent central bank and credible monetary policy.
