--- a/src/pages/notes/2021/9702_-_Physics/Paper_4_-_A_Level_Structured_Questions/Magnetic_Fields.mdx
+++ b/src/pages/notes/2021/9702_-_Physics/Paper_4_-_A_Level_Structured_Questions/Magnetic_Fields.mdx
@@ -1,7 +1,7 @@
 ## Magnetic fields in Magnets
 - Field travels from South to North 
 - Field travels South to North inside the magnetic
-- Direction of field lines at any given point is equal to the direction of force on the magnetic north pole at that point
+- Direction of field lines at any given point is equal to the direction of the force on the magnetic north pole at that point
 
 ## Magnetics fields around a current-carrying wire
 Any current-carrying conductor will induce a radial magnetic field around it in the direction found by the right-hand grip rule
@@ -12,3 +12,25 @@ It is possible to use the right-hand grip rule: switch current and magnetic fiel
 
 ## Magnetic fields
 A region of space where a magnetic pole experiences a force
+
+## Force on current carrying conductor inside a magnetic field
+Fleming's Left-hand rule
+- Thumb: force
+- 
+ 
+or Right-hand slap rule
+- Thumb: current
+- Fingers: field lines
+- Palm: force
+
+When a current-carrying conductor $I$ of length $L$ is placed inside magnetic field $B$ at $90\degree$ it experiences a force $F$.
+
+$$
+F = BIL*sin(\theta)
+$$
+
+## Magnetic flux density
+Force per unit length experienced by a long straight conductor carrying unit current and placed at right angles to the field at that point
+
+## Tesla
+One tesla is the uniform magnetic flux density when a wire carrying a current of 1.0A is placed at right angles to a magnetic field and experiences a force per unit length of 1.0N
