new: update MRI

--- a/src/pages/notes/2021/9702_-_Physics/Paper_4_-_A_Level_Structured_Questions/Magnetic_Fields.mdx
+++ b/src/pages/notes/2021/9702_-_Physics/Paper_4_-_A_Level_Structured_Questions/Magnetic_Fields.mdx
@@ -34,3 +34,12 @@ Force per unit length experienced by a long straight conductor carrying unit cur
 
 ## Tesla
 One tesla is the uniform magnetic flux density when a wire carrying a current of 1.0A is placed at right angles to a magnetic field and experiences a force per unit length of 1.0N
+
+## NMRI - Nuclear Magnetic resonance imaging
+
+1. Quantum "spin" and magnetic moment of the proton
+
+Particle nuclei (with differing numbers of protons and neutrons) have a quantum characteristic called spin.
+... due to this spin, these nuclei have a magnetic moment
+
+These magnetic moments allows these nuclei to interact with external magnetic fields
