update: add heat cap def and push

--- a/src/pages/notes/2021/9702_-_Physics/Revision/Definitions.mdx
+++ b/src/pages/notes/2021/9702_-_Physics/Revision/Definitions.mdx
@@ -86,4 +86,5 @@ $$
 ## Internal energy of a system
 > The sum of the random distributions of kinetic
 
-##
+## Specific heat capacity
+> Quantity of thermal energy required to raise temperature of a unit mass of the substance by 1 Kelvin
