new: finesh thermal defs

--- a/src/pages/notes/2021/9702_-_Physics/Revision/Definitions.mdx
+++ b/src/pages/notes/2021/9702_-_Physics/Revision/Definitions.mdx
@@ -84,7 +84,12 @@ $$
 > Temperature remains constant
 
 ## Internal energy of a system
-> The sum of the random distributions of kinetic
+> The sum of the random distributions of kinetic and potential energies of monecules in a system
 
 ## Specific heat capacity
-> Quantity of thermal energy required to raise temperature of a unit mass of the substance by 1 Kelvin
+> quantity of thermal energy required to raise the temperature of a unit mass of the substance by 1 Kelvin
+
+## Specific latent heat
+> Thermal energy required per unit mass of a substance to change its state at a constant temperature
+> Fusion = change to a lower energy state
+> Vaporisation = change to a higher energy state
