new: add electronics def

--- a/src/pages/notes/2021/9702_-_Physics/Revision/Definitions.mdx
+++ b/src/pages/notes/2021/9702_-_Physics/Revision/Definitions.mdx
@@ -84,7 +84,7 @@ $$
 > Temperature remains constant
 
 ## Internal energy of a system
-> The sum of the random distributions of kinetic and potential energies of monecules in a system
+> The sum of the random distributions of kinetic and potential energies of molecules in a system
 
 ## Specific heat capacity
 > quantity of thermal energy required to raise the temperature of a unit mass of the substance by 1 Kelvin
@@ -93,3 +93,34 @@ $$
 > Thermal energy required per unit mass of a substance to change its state at a constant temperature
 > Fusion = change to a lower energy state
 > Vaporisation = change to a higher energy state
+
+## Sensing device
+> An electronic component with a property that changes when physical quantity such as light intensity changes
+
+## Light-dependant resistor
+> An LDR is made of high resistance semi-conducting metal
+
+## Piezo-electric transducer 
+> Some crystals such as quartz produce a force when a potential difference is applied across them, causing their shape to change. This is known as the piezo-electric effect.
+
+## Acoustic impedance
+> Product of the density of a medium and the velocity of waves traveling through that medium
+
+## Attenuation
+> Gradual reduction of energy of a wave while it travels through a medium
+
+## Ideal Op-amp
+> - **Infinite input impedance:** No current in and out through inputs
+> - **Zero output impedance:** Entire $V_\text{out}$ is distributed across load
+> - **Infinite open-loop gain:** Output is immediately saturated
+> - **Infinite bandwidth:** All frequencies across inputs are amplified evenly
+> - **Infinite slew rate:** Any change in input results in an instant change across inputs (aka No latency, but do not write this)
+
+## Feedback loops
+> - **Increases bandwidth**
+> - **Descrease distortion**
+> - **Greater operational stability**
+> - **Reduce effective gain (...to avoid saturation)**
+
+## Negative Feedback
+> When some of the output is fed back into the inverting input of an op-amp to minimize saturation
