new: add communications

--- a/src/pages/notes/2021/9702_-_Physics/Revision/Definitions.mdx
+++ b/src/pages/notes/2021/9702_-_Physics/Revision/Definitions.mdx
@@ -107,7 +107,7 @@ $$
 > Product of the density of a medium and the velocity of waves traveling through that medium
 
 ## Attenuation
-> Gradual reduction of energy of a wave while it travels through a medium
+> Progressive reduction of power/energy of a wave with distance as it travels along a transmission path through a medium
 
 ## Ideal Op-amp
 > - **Infinite input impedance:** No current in and out through inputs
@@ -124,3 +124,39 @@ $$
 
 ## Negative Feedback
 > When some of the output is fed back into the inverting input of an op-amp to minimize saturation
+
+## Carrier wave
+> A Carrier wave is a high-frequency Electromagnetic wave modulated in either frequency or amplitude to transfer a signal
+
+## Amplitude Modulation
+>In amplitude modulation (AM) the frequency of the modulated wave is constant, and the amplitude of the modulated wave varies proportionally to and in phase with the signal
+
+## Frequency Modulation
+> In frequency modulation (FM), the amplitude of the carrier wave remains constant. The frequency of the carrier wave is made to vary in sync with the displacement of this information signal
+
+## Bandwidth (Communication)
+> The range of frequencies occupied by the amplitude-modulated wave
+
+## Noise
+> Random unwanted signal that is added onto and distorts the transmitted signal
+
+## Analog signal
+> Signal has the same variation as the data and is **continuously variable**
+
+## Digital signal
+> Signal with only high and low states with no intermediate values - discrete. Due to this, repeaters can regenerate a signal matching the original one without the noise.
+
+## ADC - Analog to digital converter
+> Samples an input analog signal at the sampling rate and outputs the voltage of the analog signal at that time
+
+## Sampling
+> Take analog signal and "sample" its voltage at regular intervals called the sampling rate
+
+## Wire pairs
+> Potential difference between the two wires carries the signal
+
+## Wire pairs
+> Potential difference between the two wires is the signal
+
+## Coaxial cable
+> Copper core with insulation and copper sheath/braid around outside shields core from noise.
