new: add communications defs

--- a/src/pages/notes/2021/9702_-_Physics/Revision/Definitions.mdx
+++ b/src/pages/notes/2021/9702_-_Physics/Revision/Definitions.mdx
@@ -160,3 +160,14 @@ $$
 
 ## Coaxial cable
 > Copper core with insulation and copper sheath/braid around outside shields core from noise.
+
+## Signal to noise ratio
+> A signal must be distinguishable from noise, this can be measured using the signal to noise ratio. 
+> Repeaters amplify both the signal and noise, so do not affect SNR
+> Signal regenerators completely regenerate the original signal, so that noise is removed.
+
+## Geostationary satellite
+> The satellite stays in a fixed position on top of earth above the equator and orbits from west-to-east with a period of 24 hours
+
+## Newton's law of gravitation
+> Force between two point masses is proportional to the product of their masses and inversely proportional to the square of their seperation.
