--- a/src/pages/notes/2021/9702_-_Physics/Revision/Definitions.mdx
+++ b/src/pages/notes/2021/9702_-_Physics/Revision/Definitions.mdx
@@ -167,7 +167,57 @@ $$
 > Signal regenerators completely regenerate the original signal, so that noise is removed.
 
 ## Geostationary satellite
-> The satellite stays in a fixed position on top of earth above the equator and orbits from west-to-east with a period of 24 hours
+> The satellite orbits in a fixed position on top of earth above the equator and orbits from west-to-east with a period of 24 hours
 
 ## Newton's law of gravitation
 > Force between two point masses is proportional to the product of their masses and inversely proportional to the square of their separation.
+
+## Gravitational field strength
+> The gravitational force exerted at a point per unit mass on a small test mass at that point
+
+## Gravitational potential energy
+> The work done in bringing a small test mass from infinity to that point
+
+## Gravitational potential
+> The work done per unit mass in bringing a small test mass from infinity to that point
+
+## Escape velocity
+> The velocity at which an object on the surface of a body/mass must be propelled to not return to the body under their mutual gravitational attraction
+
+## Kepler's 3rd law
+> For planets or satellites describing orbits around the same central body, the square of the period is proportional to the cube of the radius of the orbit
+
+## Magnetic fields in a current conducting wire
+> Any current conducting wire will have an induced radial magnetic field around it in the direction found via The Right-hand grip rule
+
+## Weightlessness
+> When an object has no contact/support force acting on it
+
+## Magnetic field
+> Region of space where a magnetic pole experiences a force
+
+## Electric field strength
+> Force per unit charge 
+
+## Electric potential
+> The work done per unit mass in bringing a small test charge from infinity to that point
+
+## Potential gradiant
+> Rate of change of potential with respect to distance
+
+## Coulomb's law
+> Any two point charges exert an electric force that is proportional to the product of their charges and inversely proportional to the square of their separation
+
+## Capacitance
+> Ratio of charge to the potential difference
+
+## Magnetic fields in the solenoid
+> Solenoid rule: Thumb = Magnetic North pole, Fingers = direction of current traveling around the solenoid
+
+## Magnetic flux density
+> Force per unit length experienced by a long straight conductor carrying unit that is placed at right angles at that point
+
+## 1 Tesla 
+> One tesla is the uniform magnitude flux density when a wire carrying a current 1.0A is placed at right angles to a magnetic field and experiences a force per unit length of $1.0Nm^-1$
+
+## Hall effect 
