--- a/src/pages/notes/2021/9702_-_Physics/Revision/Definitions.mdx
+++ b/src/pages/notes/2021/9702_-_Physics/Revision/Definitions.mdx
@@ -70,10 +70,10 @@ $$
 ## Charles' Law
 > Temperature (Kelvin) is proportional to the volume of the gas
 
-## Kinethic modal of gasses
+## Kinetic modal of gasses
 > The kinetic model is a theory that links the microscopic particles to their macroscopic properties as a gas
 
-## $First law of thermodynamics 
+## First law of thermodynamics 
 > Total internal energy is equal to the sum of total heat energy and total work done
 
 
